--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Document</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
         </ul>
         <ul>
           <li><a href="{% url 'about' %}">About</a></li>
-          <!-- <li><a href="/finches">All Finches</a></li> -->
+          <li><a href="{% url 'index' %}">Shop All Guides</a></li>
         </ul>
       </div>
     </nav>
