added shop guides to nav bar

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,7 +14,7 @@
         </ul>
         <ul>
           <li><a href="{% url 'about' %}">About</a></li>
-          <!-- <li><a href="/finches">All Finches</a></li> -->
+          <li><a href="{% url 'index' %}">Shop All Guides</a></li>
         </ul>
       </div>
     </nav>
