home content added to html

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Home</h1>
+<h1>CodeMasters</h1>
+<h6>CodeMasters — the trailblazing guide to software engineering.</h6>
+
+<button>Shop Study Guides Now!</button>
 
 {% endblock %}
