--- a/main_app/templates/guides/index.html
+++ b/main_app/templates/guides/index.html
@@ -2,11 +2,13 @@
 
 <h1>Shop All Guides</h1>
 {% for guide in guides %}
-<div class="card">
-  <div class="card-content">
-    <div class="{{ guide.name }}"></div>
+<a href="/guides/{{guide.id}}">
+  <div class="card">
+    <div class="card-content">
+      <div class="{{ guide.name }}"></div>
+    </div>
+    <span class="card-title">{{ guide.name }}</span>
   </div>
-  <span class="card-title">{{ guide.name }}</span>
-</div>
+</a>
 
 {% endfor %} {% endblock %}
