--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <nav>
-        <div>
+        <div class="nav-wrapper">
           <ul>
             <li><a href="{% url 'home' %}">&nbsp;&nbsp;Home</a></li>
           </ul>
