--- a/main_app/templates/guides/index.html
+++ b/main_app/templates/guides/index.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %} {% block content %}
 
+<h1 id="indextitle">Shop All Guides</h1>
 <body class="indexbody">
-  <h1 id="indextitle">Shop All Guides</h1>
-  {% for guide in guides %}
-  <a href="/guides/{{guide.id}}">
-    <div class="card">
-      <div class="card-content">
+  <div class="cardscontainer">
+    {% for guide in guides %}
+    <a href="/guides/{{guide.id}}">
+      <div class="card">
         <div class="{{ guide.name }}"></div>
+        <span class="card-title">{{ guide.name }}</span>
       </div>
-      <span class="card-title">{{ guide.name }}</span>
-    </div>
-  </a>
+    </a>
+    {% endfor %}
+  </div>
 </body>
-
-{% endfor %} {% endblock %}
+{% endblock %}
