--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -1,6 +1,4 @@
-{% extends 'base.html' %}
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <h1>Guide Details</h1>
 <div class="row">
@@ -8,26 +6,25 @@
     <div class="card">
       <div class="card-content">
         <div class="{{ guide.name }}"></div>
-         <span class="card-title">{{ guide.name }}</span>
-    <p>{{guide.description|linebreaks}}</p>
-    <p>Price: {{guide.price}}</p>
+        <span class="card-title">{{ guide.name }}</span>
+        <p>{{guide.description|linebreaks}}</p>
+        <p>Price: {{guide.price}}</p>
+      </div>
     </div>
   </div>
   <div class="col s6">
-    <table class="striped">
-      <thead>
-        <tr><th>Date</th><th>Order</th></tr>
-      </thead>
-      <tbody>
-        {% for order in guide.order_set.all %}
-          <tr>
-            <td>{{order.date}}</td>
-            <td>{{feeding.get_meal_display}}</td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+    <form method="POST" action="{% url 'create_order' guide.id %}">
+      {% csrf_token %} {{ order_form.as_p }}
+      <button type="submit">Save Order</button>
+    </form>
   </div>
-</div>
 
-{% endblock %}
+  {% endblock %}
+</div>
+<!-- <form action="POST">
+  <label for="UName">Username</label><br>
+  <input type="text" id="UName"><br>
+  <label for="PWord">Password</label><br>
+  <input type="text" id="PWord"><br>
+  <input type="submit" value="Submit">
+</form> -->
