--- a/main_app/templates/guides/index.html
+++ b/main_app/templates/guides/index.html
@@ -3,7 +3,7 @@
 <body class="indexbody">
   <h1>Shop All Guides</h1>
   {% for guide in guides %}
-  <a href="/guides/{{guide.id}}">
+  <a href="{% url 'detail' guide.id%}">
     <div class="card">
       <div class="card-content">
         <div class="{{ guide.name }}"></div>
