--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h1>Log In</h1>
-
-<form method="POST" action="{% url 'login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="hidden" name="next" value="{{ next }}">
-  <button type="submit" class="btn">Log In</button>
-</form>
+<body class="loginbody">
+  <div class="loginbox">
+    <h1 id="logintitle">Let's Retrieve Your Account!</h1>
+    <form method="POST" action="{% url 'login' %}">
+      {% csrf_token %}
+      {{ form.as_p }}
+    <input type="hidden" name="next" value="{{ next }}">
+    <button type="submit" id="loginbtn">Log In</button>
+    </form>
+  </div>
+</body>
 
 {% endblock %}
