--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %} {% block content %}
 
-<h1>Sign Up</h1>
+<body class="bodysignup">
+  <div class="signupbox">
+    <h1 id="signuptitle">Don't have an account with us yet? Let's get you signed up!</h1>
+    <p class="red-text">{{ error_message }}</p>
+    
+    <form method="POST" action="{% url 'signup' %}">
+      {% csrf_token %} {{ form.as_p }}
+      <input type="submit" class="btn" value="Sign Up" />
+    </form>
+  </div>
+</body>
 
-<p class="red-text">{{ error_message }}</p>
-
-<form method="POST" action="{% url 'signup' %}">
-  {% csrf_token %} {{ form.as_p }}
-  <input type="submit" class="btn" value="Sign Up" />
-</form>
 
 {% endblock %}
