--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,6 +28,7 @@
             <li><a href="{% url 'index' %}">Shop All Guides</a></li>
             {% if user.is_authenticated %}
             <li><a href="{% url 'logout' %}">Log Out</a></li>
+            <li><a href="{% url 'orders_index' %}">View All My Orders</a></li>
             {% else %}
             <li><a href="{% url 'signup' %}">Sign Up</a></li>
             <li><a href="{% url 'login' %}">Log In</a></li>
