--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -149,7 +149,7 @@
   margin: auto;
   margin-bottom: 10%;
   display: grid;
- justify-content:center;
+  justify-content: center;
 }
 
 #loginbtn {
@@ -165,7 +165,7 @@
 }
 
 .bodysignup {
-background-color:#f5f2e2;
+  background-color: #f5f2e2;
 }
 
 .signupbox {
@@ -180,15 +180,20 @@ background-color:#f5f2e2;
   margin: auto;
   margin-bottom: 10%;
   display: grid;
- justify-content:center;
- color: #f5f2e2;
+  justify-content: center;
+  color: #f5f2e2;
 }
 
 #signuptitle {
   font-size: 20px;
-  color:#f5f2e2;
+  color: #f5f2e2;
   text-align: center;
   margin-left: 1%;
   margin-bottom: 1%;
-  
+}
+
+footer.page-footer {
+  background-color: #023047;
+  padding-top: 0;
+  text-align: right;
 }
