--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -37,6 +37,11 @@
         </div>
       </nav>
     </header>
-    {% block content %} {% endblock %}
+    <main>{% block content %} {% endblock %}</main>
+    <footer class="page-footer">
+      <div class="right">
+        All Rights Reserved, &copy; 2022 Code Masters &nbsp;
+      </div>
+    </footer>
   </body>
 </html>
