--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -48,12 +48,15 @@
   font-size: 80px;
   color: #023047;
   font-style: italic;
+  font-weight: 900;
 }
 
 .hometitleslogan {
   text-align: center;
   margin-top: 20%;
   font-style: italic;
+  font-weight: 500;
+  
 }
 
 #homebutton {
@@ -66,6 +69,7 @@
   font-size: 25px;
   font-style: italic;
   color: #023047;
+  font-weight: 700;
 }
 
 #homebutton > a {
@@ -78,7 +82,7 @@
   color: #023047;
   font-style: italic;
   text-align: center;
-  margin-top: 15%;
+  margin-top: 6%;
   text-decoration: underline #ffb703;
 }
 
@@ -123,6 +127,9 @@
   font-style: italic;
   margin-left: 5%;
   margin-top: 5%;
+  text-decoration: underline #ffb703;
+  font-weight: 700;
+  text-align: center;
 }
 
 #logintitle {
@@ -146,8 +153,8 @@
   border-color: #ffb703;
   border-radius: 4%;
   margin-top: auto;
-  margin: auto;
-  margin-bottom: 10%;
+  margin: 25%;
+  margin-bottom: 20%;
   display: grid;
  justify-content:center;
 }
@@ -170,25 +177,92 @@ background-color:#f5f2e2;
 
 .signupbox {
   text-align: center;
-  width: 50%;
+  width: 60%;
   height: 50%;
   background-color: #023047;
   border: 4px solid;
   border-color: #ffb703;
   border-radius: 4%;
+  margin: 20%;
   margin-top: auto;
-  margin: auto;
-  margin-bottom: 10%;
+  margin-block: 5%;
   display: grid;
- justify-content:center;
- color: #f5f2e2;
+ color: gray;
+ font-size: 10px;
+ font-style: italic;
+ padding-top: 5%; 
+}
+
+#signupbtn {
+  margin-top: 6%;
+  background-color: #ffb703;
+  height: 30px;
+  width: 90px;
+  border: 2px solid;
+  border-color: #023047;
+  border-radius: 4%;
+  font-size: 15px;
+  color: #023047;
+
 }
 
 #signuptitle {
   font-size: 20px;
-  color:#f5f2e2;
+  color:#023047;
   text-align: center;
   margin-left: 1%;
-  margin-bottom: 1%;
+  margin-top: 10%;
+  font-weight: 700;
+}
+ .detailsbody {
+  background-color: #f5f2e2;
+ }
+
+#detailstitle {
+  font-size: 80px;
+  color: #023047;
+  font-style: italic;
+  margin-left: 50%;
+  margin-top: 50%;
+  margin: 6%;
+  text-decoration: underline #ffb703;
+  font-weight: 700;
+  text-align: center;
   
+
+}
+
+.detailcardtitle{
+  font-size: 30px;
+  color: #023047;
+  font-style: italic;
+  margin-left: -1%;
+  margin-top: 5%;
+}
+
+.detaildescription {
+  font-size: 15px;
+  color: #023047;
+  font-style: italic;
+  margin-left: 1%;
+  margin-top: 5%;
+  font-weight: 500;
+}
+
+#detailbutton{
+  margin-top: 7%;
+  background-color: #023047;
+  height: 60px;
+  border: 4px solid;
+  border-color: #ffb703;
+  border-radius: 4%;
+  font-size: 15px;
+  font-weight: 700;
+  color: #ffb703;
+  max-width: 50%;
+}
+
+.orderform{
+  display: grid;
+  justify-content: center;
 }
