--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -22,6 +22,11 @@
   </div>
 
   <div class="col s6">
+    <form method="POST">
+      {% csrf_token %}
+      {{ comment_form.as_p }}
+      <input type="submit" class="btn" value="Add Comment">
+    </form>
     <table class="striped">
       <thead>
         <tr><th>UserName</th><th>Date</th><th>Comment</th></tr>
