--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="col s6">
-    <form method="POST">
+    <form action="{% url 'add_comment' guide.id %}" method="POST">
       {% csrf_token %}
       {{ comment_form.as_p }}
       <input type="submit" class="btn" value="Add Comment">
