--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -23,26 +23,29 @@
 
   <div class="col s6">
     <form action="{% url 'add_comment' guide.id %}" method="POST">
-      {% csrf_token %}
-      {{ comment_form.as_p }}
-      <input type="submit" class="btn" value="Add Comment">
+      {% csrf_token %} {{ comment_form.as_p }}
+      <input type="submit" class="btn" value="Add Comment" />
     </form>
     <table class="striped">
       <thead>
-        <tr><th>UserName</th><th>Date</th><th>Comment</th></tr>
+        <tr>
+          <th>UserName</th>
+          <th>Date</th>
+          <th>Comment</th>
+          <th>Edit</th>
+          <th>Delete</th>
+        </tr>
       </thead>
       <tbody>
         {% for comment in guide.comment_set.all %}
-          <tr>
-            <td>{{comment.user}}</td>
-            <td>{{comment.date}}</td>
-            <td>{{comment.review}}</td>
-            
-          </tr>
+        <tr>
+          <td>{{user.username}}</td>
+          <td>{{comment.date}}</td>
+          <td>{{comment.review}}</td>
+        </tr>
         {% endfor %}
       </tbody>
     </table>
   </div>
-
 </div>
 {% endblock %}
