--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -53,6 +53,7 @@
           <td>{{user.username}}</td>
           <td>{{comment.date}}</td>
           <td>{{comment.review}}</td>
+          <td><a href="{% url 'delete_comment' comment.id %}">Delete</a></td>
         </tr>
         {% endfor %}
       </tbody>
