--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -52,7 +52,8 @@
           <td>{{user.username}}</td>
           <td>{{comment.date}}</td>
           <td>{{comment.review}}</td>
-          <td><a href="{% url 'delete_comment' comment.id %}">Delete</a></td>
+          <td><a href="{% url 'delete_comment' guide_id=guide.id pk=comment.id %}">Delete</a></td>
+
         </tr>
         {% endfor %}
       </tbody>
