--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -52,6 +52,7 @@
           <td>{{user.username}}</td>
           <td>{{comment.date}}</td>
           <td>{{comment.review}}</td>
+          <td><a href="{% url 'update_comment' guide_id=guide.id pk=comment.id %}">Edit</a></td>
           <td><a href="{% url 'delete_comment' guide_id=guide.id pk=comment.id %}">Delete</a></td>
 
         </tr>
