--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -12,26 +12,19 @@
         <p class="detaildescription">Price: ${{guide.price}}.00</p>
       </div>
     </div>
-    <div class="col s6">
-      <form class="orderform" method="POST" action="{% url 'create_order' guide.id %}">
-        {% csrf_token %} {{ order_form.as_p }}
-        <button id="detailbutton" type="submit">Save Order!</button>
-      </form>
-    </div>
+  
 </body>
 
   </div>
   <div class="col s6">
-    <form method="POST" action="{% url 'orders_create' %}">
-      <!-- guide.id
-      'orders_index'  -->
+    <form class="orderform" method="POST" action="{% url 'orders_create' %}">
       {% csrf_token %} {{ order_form.as_p }}
       <button type="submit">Save Order</button>
     </form>
   </div>
  
 
-  <div class="col s6">
+  <!-- <div class="col s6"> -->
     <form action="{% url 'add_comment' guide.id %}" method="POST">
       {% csrf_token %} {{ comment_form.as_p }}
       <input type="submit" class="btn" value="Add Comment" />
@@ -52,13 +45,17 @@
           <td>{{user.username}}</td>
           <td>{{comment.date}}</td>
           <td>{{comment.review}}</td>
-          <td><a href="{% url 'update_comment' guide_id=guide.id pk=comment.id %}">Edit</a></td>
+          <td><form method="UPDATE" action="{% url 'edit_comment' guide_id=guide.id pk=comment.id %}">
+            {% csrf_token %}
+            {{ comment_form.as_p }}
+            <button type="submit">Update Comment</button>
+          </form></td>
           <td><a href="{% url 'delete_comment' guide_id=guide.id pk=comment.id %}">Delete</a></td>
 
         </tr>
         {% endfor %}
       </tbody>
     </table>
-  </div>
+  <!-- </div> -->
 </div>
 {% endblock %}
