work of updating the the comment function and path and create template for that

--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -45,11 +45,9 @@
           <td>{{user.username}}</td>
           <td>{{comment.date}}</td>
           <td>{{comment.review}}</td>
-          <td><form method="UPDATE" action="{% url 'edit_comment' guide_id=guide.id pk=comment.id %}">
-            {% csrf_token %}
-            {{ comment_form.as_p }}
-            <button type="submit">Update Comment</button>
-          </form></td>
+          <td>
+            <a href="{% url 'update_comment' guide_id=guide.id comment_id=comment.id %}">Update</a>
+          </td>
           <td><a href="{% url 'delete_comment' guide_id=guide.id pk=comment.id %}">Delete</a></td>
 
         </tr>
