--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -46,7 +46,7 @@
           <td>{{comment.date}}</td>
           <td>{{comment.review}}</td>
           <td>
-            <a href="{% url 'update_comment' guide_id=guide.id comment_id=comment.id %}">Update</a>
+            <a href="{% url 'update_comment' guide_id=guide.id comment_id=comment.id %}">Edit</a>
           </td>
           <td><a href="{% url 'delete_comment' guide_id=guide.id pk=comment.id %}">Delete</a></td>
 
