--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -24,7 +24,7 @@
   </div>
  
 
-  <!-- <div class="col s6"> -->
+  <div class="col s6">
     <form action="{% url 'add_comment' guide.id %}" method="POST">
       {% csrf_token %} {{ comment_form.as_p }}
       <input type="submit" class="btn" value="Add Comment" />
@@ -54,6 +54,6 @@
         {% endfor %}
       </tbody>
     </table>
-  <!-- </div> -->
+  </div>
 </div>
 {% endblock %}
