--- a/main_app/templates/guides/detail.html
+++ b/main_app/templates/guides/detail.html
@@ -29,7 +29,7 @@
       {% csrf_token %} {{ comment_form.as_p }}
       <input type="submit" class="btn" value="Add Comment" />
     </form>
-    <table class="striped">
+    <table class="striped" id="commenttable">
       <thead>
         <tr>
           <th>UserName</th>
